# STM32Emulator

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
STM32F429/: CANConfig.cpp  CANConfig.h  ClockConfig.cpp  ClockConfig.h  DMAConfig.cpp  DMAConfig.h  GPIOConfig.cpp  GPIOConfig.h  I2CConfig.cpp  I2CConfig.h  SPIConfig.cpp  SPIConfig.h  TimerConfig.cpp  TimerConfig.h  UARTConfig.cpp  UARTConfig.h  main.cpp
